adding Pipfile; moving static files to subdir

--- a/songlist.ini
+++ b/songlist.ini
@@ -6,11 +6,12 @@ base = /home/www/website/songlist
 app = wsgi
 module = app.songlist
 
-home = %(base)/venv
-pythonpath = %(home)
+#home = %(base)
+#pythonpath = %(home)
 
 #socket file's location
-socket = 127.0.0.1:7664
+#socket = 127.0.0.1:7664
+socket = songlist.sock
 
 #permissions for the socket file
 chmod-socket    = 666
